update evaluate model notebook

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -36,7 +36,9 @@
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
     "\n",
-    "ACTIVITY_LABELS = [\"light\", \"moderate-vigorous\", \"sedentary\", \"sleep\"]"
+    "out_dir = \"outputs/evaluation/actinet_bbaa\"\n",
+    "\n",
+    "ACTIVITY_LABELS = np.unique([\"light\", \"moderate-vigorous\", \"sedentary\", \"sleep\"])"
    ]
   },
   {
@@ -128,28 +130,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actinet_res_path = \"outputs/actinet_vs_bbaa/actinet_results.pkl\"\n",
-    "bbaa_res_path = \"outputs/actinet_vs_bbaa/rf_results.pkl\"\n",
+    "actinet_res_path = out_dir + \"/actinet_results.pkl\"\n",
+    "bbaa_res_path = out_dir + \"/rf_results.pkl\"\n",
     "\n",
     "if not os.path.exists(actinet_res_path) or not os.path.exists(bbaa_res_path):\n",
-    "    bbaa_classifier = RFActivityClassifier(\n",
-    "        winsec=WINSEC,\n",
-    "        labels=ACTIVITY_LABELS,\n",
-    "        n_estimators=1000,\n",
-    "        oob_score=True,\n",
-    "        sampling_strategy=\"not minority\",\n",
-    "        replacement=True,\n",
-    "        n_jobs=N_JOBS,\n",
-    "        random_state=42,\n",
-    "        verbose=1\n",
-    "    )\n",
+    "    os.makedirs(out_dir+'/models', exist_ok=True)\n",
     "\n",
-    "    actinet_classifier = ActivityClassifier(\n",
-    "        labels = np.unique(Y_actinet),\n",
-    "        batch_size=1000,\n",
-    "        device=\"cuda:0\",\n",
-    "        verbose=True\n",
-    "    )\n",
+    "    rf_params = {\n",
+    "        \"winsec\": WINSEC,\n",
+    "        \"labels\": ACTIVITY_LABELS,\n",
+    "        \"n_estimators\": 1000,\n",
+    "        \"sampling_strategy\": \"not minority\",\n",
+    "        \"replacement\": True,\n",
+    "        \"n_jobs\": N_JOBS,\n",
+    "        \"verbose\": 1\n",
+    "    }\n",
+    "\n",
+    "    actinet_params = {\n",
+    "        \"labels\": ACTIVITY_LABELS,\n",
+    "        \"batch_size\": 1000,\n",
+    "        \"device\": \"cuda:0\",\n",
+    "        \"verbose\": True\n",
+    "    }\n",
+    "\n",
+    "    eval_params = {\n",
+    "        \"rf_params\": rf_params,\n",
+    "        \"data_params\": {\n",
+    "            \"sample_rate\": SAMPLE_RATE,\n",
+    "            \"resample_rate\": RESAMPLE_RATE,\n",
+    "            \"winsec\": WINSEC,\n",
+    "            \"n_jobs\": N_JOBS,\n",
+    "            \"downsampling_method\": \"linear\",\n",
+    "            \"datafiles\": DATAFILES,\n",
+    "            \"annofile\": ANNOFILE,\n",
+    "            \"savefolder\": SAVEFOLDER,\n",
+    "            \"anno_label\": \"Walmsley2020\"\n",
+    "        },\n",
+    "        \"actinet_params\": actinet_params\n",
+    "    }\n",
+    "\n",
+    "    bbaa_classifier = RFActivityClassifier(**rf_params)\n",
+    "\n",
+    "    actinet_classifier = ActivityClassifier(**actinet_params)\n",
     "\n",
     "    res = evaluate_models(\n",
     "        actinet_classifier,\n",
@@ -162,8 +184,8 @@
     "        P_bbaa,\n",
     "        T_actinet,\n",
     "        T_bbaa,\n",
-    "        weights_path=\"models/evaluation_models/actinet_vs_bbaa_{}.pt\",\n",
-    "        out_dir=\"outputs/actinet_vs_bbaa\",\n",
+    "        weights_path=out_dir+\"/models/actinet_fold_{}.pt\",\n",
+    "        out_dir=out_dir,\n",
     "        verbose=True,\n",
     "    )\n",
     "\n",
@@ -386,15 +408,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -448,9 +461,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_confusion_matrices(results_df, save_path=\"outputs/actinet_vs_bbaa/full_population.pdf\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, group_by=\"Sex\", save_path=\"outputs/actinet_vs_bbaa/by_sex.pdf\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, group_by=\"Age Band\", save_path=\"outputs/actinet_vs_bbaa/by_age.pdf\", fontsize=18)"
+    "generate_confusion_matrices(results_df, save_path=out_dir+\"/plots/conf_full_population.pdf\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.pdf\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.pdf\", fontsize=18)"
    ]
   },
   {
@@ -466,12 +479,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_bland_altman_plots(results_df, save_path=\"outputs/actinet_vs_bbaa/bland_altman/full_population.pdf\")\n",
+    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba_full_population.pdf\")\n",
     "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
-    "                            save_path=\"outputs/actinet_vs_bbaa/bland_altman/by_sex_female.pdf\")\n",
+    "                            save_path=out_dir+\"/plots/ba_by_sex_female.pdf\")\n",
     "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
-    "                            save_path=\"outputs/actinet_vs_bbaa/bland_altman/by_sex_male.pdf\")\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=\"outputs/actinet_vs_bbaa/bland_altman/by_age.pdf\")"
+    "                            save_path=out_dir+\"/plots/ba_by_sex_male.pdf\")\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba_by_age.pdf\")"
    ]
   }
  ],
