Ignore transition gaps

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -172,7 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.fit(X, Y, pid, T, f\"models/c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.pt\", n_splits=1)"
+    "classifier_save_path = f\"models/c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.pt\"\n",
+    "classifier.fit(X, Y, pid, T, True, classifier_save_path, n_splits=1)"
    ]
   },
   {
@@ -258,6 +259,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note ordering is sleep, sedentary, light, MVPA\n",
+    "loaded_classifier.hmm.display(precision=3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,6 +310,13 @@
    "source": [
     "p = plotTimeSeries(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
