Train hmm with corrected sleep transitions

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -139,6 +139,8 @@
     "    rf_params = {\n",
     "        \"winsec\": WINSEC,\n",
     "        \"labels\": ACTIVITY_LABELS,\n",
+    "        \"hmm_handle_sleep_transitions\": True,\n",
+    "        \"hmm_ignore_transition_gaps\": False,\n",
     "        \"n_estimators\": 1000,\n",
     "        \"sampling_strategy\": \"not minority\",\n",
     "        \"replacement\": True,\n",
@@ -150,6 +152,8 @@
     "        \"labels\": ACTIVITY_LABELS,\n",
     "        \"batch_size\": 1000,\n",
     "        \"device\": \"cuda:0\",\n",
+    "        \"hmm_handle_sleep_transitions\": True,\n",
+    "        \"hmm_ignore_transition_gaps\": False,\n",
     "        \"verbose\": True\n",
     "    }\n",
     "\n",
