--- a/Re-TrainModel.ipynb
+++ b/Re-TrainModel.ipynb
@@ -44,6 +44,7 @@
     "    device=\"cpu\",\n",
     "    window_sec=WINSEC,\n",
     "    verbose=True,\n",
+    "    hmm_handle_sleep_transitions=True,\n",
     "    weights_path=\"models/c24_rw_20240308.pt\"\n",
     ")\n",
     "\n",
