--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -120,6 +120,8 @@
     "classifier = ActivityClassifier(\n",
     "    labels = np.unique(Y),\n",
     "    batch_size=1000,\n",
+    "    hmm_ignore_transition_gaps=False,\n",
+    "    hmm_handle_sleep_transitions=True,\n",
     "    device=\"cuda:0\",\n",
     "    window_sec=WINSEC,\n",
     "    verbose=True\n",
@@ -173,7 +175,7 @@
    "outputs": [],
    "source": [
     "classifier_save_path = f\"models/c24_rw_{WINSEC}s_{datetime.now().strftime('%Y%m%d')}.pt\"\n",
-    "classifier.fit(X, Y, pid, T, True, classifier_save_path, n_splits=1)"
+    "classifier.fit(X, Y, pid, T, classifier_save_path, n_splits=1)"
    ]
   },
   {
@@ -299,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = loaded_classifier.predict_from_frame(data, 100, True)"
+    "y = loaded_classifier.predict_from_frame(data, 100, True, '1H')"
    ]
   },
   {
@@ -310,13 +312,6 @@
    "source": [
     "p = plotTimeSeries(y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
