Final improvements to new model

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -20,6 +20,7 @@
     "from glob import glob\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime\n",
     "\n",
     "from actinet.models import ActivityClassifier, RFActivityClassifier\n",
     "from actinet.prepare import load_all_and_make_windows, extract_accelerometer_features, \\\n",
@@ -36,7 +37,7 @@
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
     "\n",
-    "out_dir = \"outputs/evaluation/actinet_bbaa\"\n",
+    "out_dir = \"outputs/evaluation/actinet_bbaa_{}\".format(datetime.now().strftime('%Y%m%d'))\n",
     "\n",
     "ACTIVITY_LABELS = np.unique([\"light\", \"moderate-vigorous\", \"sedentary\", \"sleep\"])"
    ]
