add actinet version to eval folder name

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -22,6 +22,7 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
     "\n",
+    "from actinet import __version__ as actinet_version\n",
     "from actinet.models import ActivityClassifier, RFActivityClassifier\n",
     "from actinet.prepare import load_all_and_make_windows, extract_accelerometer_features, \\\n",
     "    prepare_accelerometer_data\n",
@@ -32,14 +33,12 @@
     "SAMPLE_RATE = 100 # Hz\n",
     "RESAMPLE_RATE = 30 # Hz\n",
     "N_JOBS = 8 # Set to higher number for quicker execution, but don't exceed max.\n",
-    "\n",
     "DATAFILES = f\"data/capture24/P[0-9][0-9][0-9].csv.gz\"\n",
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
+    "ACTIVITY_LABELS = np.unique([\"light\", \"moderate-vigorous\", \"sedentary\", \"sleep\"])\n",
     "\n",
-    "out_dir = \"outputs/evaluation/actinet_bbaa_{}\".format(datetime.now().strftime('%Y%m%d'))\n",
-    "\n",
-    "ACTIVITY_LABELS = np.unique([\"light\", \"moderate-vigorous\", \"sedentary\", \"sleep\"])"
+    "out_dir = \"outputs/evaluation/actinet_bbaa_{}\".format(convert_version(actinet_version))"
    ]
   },
   {
