Add eval utils and extra evaluation plots

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -312,22 +312,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Difference boxplots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_difference_boxplots(results_df)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -368,6 +352,9 @@
     "    ax.set_xlabel(\"Age Band\")\n",
     "    ax.set_ylabel(f\"Cohen's kappa score\")\n",
     "    plt.title(f\"Performance by {x}\")\n",
+    "    \n",
+    "    handles, _ = ax.get_legend_handles_labels()\n",
+    "    ax.legend(handles, [\"Baseline\", \"ActiNet\"], title=hue)\n",
     "    plt.show()"
    ]
   },
@@ -433,8 +420,8 @@
     "        \n",
     "        y_true_bbaa, y_pred_bbaa, y_true_actinet, y_pred_actinet, _ = build_confusion_matrix_data(results_df)\n",
     "        \n",
-    "        plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'accelerometer', ax=axs[0], fontsize=fontsize*0.8)\n",
-    "        plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'actinet', ax=axs[1], fontsize=fontsize*0.8)\n",
+    "        plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'Baseline', ax=axs[0], fontsize=fontsize*0.8)\n",
+    "        plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'ActiNet', ax=axs[1], fontsize=fontsize*0.8)\n",
     "        fig.tight_layout()\n",
     "        plot_and_save_fig(fig, save_path)\n",
     "    \n",
@@ -453,9 +440,9 @@
     "            subfig.suptitle(f\"{group_by}: {group} (n = {population})\", fontsize=fontsize*0.9)\n",
     "            axs = subfig.subplots(nrows=1, ncols=2, sharey=True)\n",
     "\n",
-    "            plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'accelerometer', ax=axs[0], fontsize=fontsize*0.8)\n",
-    "            plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'actinet', ax=axs[1], fontsize=fontsize*0.8)\n",
-    "        \n",
+    "            plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'Baseline', ax=axs[0], fontsize=fontsize*0.8)\n",
+    "            plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'ActiNet', ax=axs[1], fontsize=fontsize*0.8)\n",
+    "\n",
     "        plot_and_save_fig(fig, save_path)"
    ]
   },
@@ -465,9 +452,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_confusion_matrices(results_df, save_path=out_dir+\"/plots/conf_full_population.pdf\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.pdf\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.pdf\", fontsize=18)"
+    "generate_confusion_matrices(results_df, save_path=out_dir+\"/plots/conf_full_population.png\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.png\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.png\", fontsize=18)"
    ]
   },
   {
@@ -483,12 +470,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba_full_population.pdf\")\n",
+    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba_full_population.png\")\n",
     "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
-    "                            save_path=out_dir+\"/plots/ba_by_sex_female.pdf\")\n",
+    "                            save_path=out_dir+\"/plots/ba_by_sex_female.png\")\n",
     "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
-    "                            save_path=out_dir+\"/plots/ba_by_sex_male.pdf\")\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba_by_age.pdf\")"
+    "                            save_path=out_dir+\"/plots/ba_by_sex_male.png\")\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba_by_age.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba__true_actinet_full_population.png\", compare_to_true='actinet')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
+    "                            save_path=out_dir+\"/plots/ba__true_actinet_by_sex_female.png\", compare_to_true='actinet')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
+    "                            save_path=out_dir+\"/plots/ba__true_actinet_by_sex_male.png\", compare_to_true='actinet')\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba__true_actinet_by_age.png\", compare_to_true='actinet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba_true_bbaa_full_population.png\", compare_to_true='bbaa')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
+    "                            save_path=out_dir+\"/plots/ba_true_bbaa_by_sex_female.png\", compare_to_true='bbaa')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
+    "                            save_path=out_dir+\"/plots/ba_true_bbaa_by_sex_male.png\", compare_to_true='bbaa')\n",
+    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba_true_bbaa_by_age.png\", compare_to_true='bbaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build_mae_table(results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_errors(results_df, save_path = out_dir + \"/plots/errors_full_population.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_errors(results_df, group_by='Age Band', save_path = out_dir + \"/plots/errors_by_age.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_errors(results_df, group_by='Sex', save_path=out_dir + \"/plots/errors_by_sex.png\")"
    ]
   }
  ],
