Rewire actinet to be trainied on Willetts annotations

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -27,6 +27,7 @@
     "from actinet.prepare import load_all_and_make_windows, extract_accelerometer_features, \\\n",
     "    prepare_accelerometer_data\n",
     "from actinet.evaluate import evaluate_models\n",
+    "from actinet.utils.utils import ACTIVITY_LABELS_DICT\n",
     "from actinet.utils.eval_utils import *\n",
     "\n",
     "WINSEC = 30 # seconds\n",
@@ -36,9 +37,12 @@
     "DATAFILES = f\"data/capture24/P[0-9][0-9][0-9].csv.gz\"\n",
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
     "SAVEFOLDER = f\"data/capture24\"\n",
-    "ACTIVITY_LABELS = np.unique([\"light\", \"moderate-vigorous\", \"sedentary\", \"sleep\"])\n",
+    "ANNOLABEL = \"Walmsley2020\"\n",
     "\n",
-    "out_dir = \"outputs/evaluation/actinet_bbaa_{}\".format(convert_version(actinet_version))"
+    "\n",
+    "ACTIVITY_LABELS = np.unique(list(ACTIVITY_LABELS_DICT[ANNOLABEL].keys()))\n",
+    "\n",
+    "out_dir = f\"outputs/evaluation/{ANNOLABEL}/actinet_bbaa_{convert_version(actinet_version)}\""
    ]
   },
   {
@@ -86,7 +90,7 @@
     "    P_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/pid.npy\")\n",
     "\n",
     "else:\n",
-    "    X_bbaa, Y_bbaa, T_bbaa, P_bbaa = prepare_accelerometer_data(ANNOFILE, SAVEFOLDER, N_JOBS)"
+    "    X_bbaa, Y_bbaa, T_bbaa, P_bbaa = prepare_accelerometer_data(ANNOFILE, ANNOLABEL, SAVEFOLDER, N_JOBS)"
    ]
   },
   {
@@ -96,18 +100,18 @@
    "outputs": [],
    "source": [
     "# Actinet data prepared\n",
-    "if len(glob(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/*.npy\")) == 4:\n",
-    "    X_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/X.npy\")\n",
-    "    Y_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/Y.npy\")\n",
-    "    T_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/T.npy\")\n",
-    "    P_actinet = np.load(f\"{SAVEFOLDER}/prepared/downsampling_linear_lowpass_None/pid.npy\")\n",
+    "if len(glob(f\"{SAVEFOLDER}/30s/{ANNOLABEL}/*.npy\")) == 4:\n",
+    "    X_actinet = np.load(f\"{SAVEFOLDER}/30s/{ANNOLABEL}/X.npy\")\n",
+    "    Y_actinet = np.load(f\"{SAVEFOLDER}/30s/{ANNOLABEL}/Y.npy\")\n",
+    "    T_actinet = np.load(f\"{SAVEFOLDER}/30s/{ANNOLABEL}/T.npy\")\n",
+    "    P_actinet = np.load(f\"{SAVEFOLDER}/30s/{ANNOLABEL}/pid.npy\")\n",
     "\n",
     "else:\n",
     "    X_actinet, Y_actinet, T_actinet, P_actinet = load_all_and_make_windows(\n",
     "        datafiles=glob(DATAFILES), \n",
     "        annofile=ANNOFILE, \n",
     "        out_dir=SAVEFOLDER, \n",
-    "        anno_label=\"Walmsley2020\",\n",
+    "        anno_label=ANNOLABEL,\n",
     "        sample_rate=SAMPLE_RATE,\n",
     "        winsec=WINSEC,\n",
     "        n_jobs=N_JOBS,\n",
@@ -168,7 +172,7 @@
     "            \"datafiles\": DATAFILES,\n",
     "            \"annofile\": ANNOFILE,\n",
     "            \"savefolder\": SAVEFOLDER,\n",
-    "            \"anno_label\": \"Walmsley2020\"\n",
+    "            \"anno_label\": ANNOLABEL\n",
     "        },\n",
     "        \"actinet_params\": actinet_params\n",
     "    }\n",
@@ -512,7 +516,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "build_mae_table(results_df)"
+    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, save_path=out_dir+\"/plots/conf_full_population.png\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.png\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.png\", fontsize=18)"
    ]
   },
   {
@@ -521,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_errors(results_df, save_path = out_dir + \"/plots/errors_full_population.png\")"
+    "build_mae_table(results_df, ACTIVITY_LABELS)"
    ]
   },
   {
@@ -530,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_errors(results_df, group_by='Age Band', save_path = out_dir + \"/plots/errors_by_age.png\")"
+    "plot_errors(results_df, ACTIVITY_LABELS, ANNOLABEL, save_path = out_dir + \"/plots/errors_full_population.png\")"
    ]
   },
   {
@@ -539,7 +545,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_errors(results_df, group_by='Sex', save_path=out_dir + \"/plots/errors_by_sex.png\")"
+    "plot_errors(results_df, ACTIVITY_LABELS, ANNOLABEL, group_by='Age Band', save_path = out_dir + \"/plots/errors_by_age.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_errors(results_df, ACTIVITY_LABELS, ANNOLABEL, group_by='Sex', save_path=out_dir + \"/plots/errors_by_sex.png\")"
    ]
   }
  ],
