--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -31,6 +31,7 @@
     "from actinet.accPlot import plotTimeSeries\n",
     "from actinet.models import ActivityClassifier\n",
     "from actinet.prepare import load_all_and_make_windows\n",
+    "from actinet.utils.utils import ACTIVITY_LABELS_DICT\n",
     "\n",
     "WINSEC = 30 # seconds\n",
     "SAMPLE_RATE = 100 # Hz\n",
@@ -84,7 +85,9 @@
    "source": [
     "DATAFILES = f\"data/capture24/P[0-9][0-9][0-9].csv.gz\"\n",
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
-    "SAVEFOLDER = f\"data/capture24/{WINSEC}s\"\n",
+    "ANNOLABEL = \"Willetts2018\" # Choose between WillettsSpecific2018, WillettsMET2018, DohertySpecific2018,...\n",
+    "                           # Walmsley2020, Willetts2018\n",
+    "SAVEFOLDER = f\"data/capture24/{WINSEC}s/{ANNOLABEL}\"\n",
     "\n",
     "if len(glob(f\"{SAVEFOLDER}/*.npy\")) == 4:\n",
     "    X = np.load(f\"{SAVEFOLDER}/X.npy\")\n",
@@ -97,7 +100,7 @@
     "        datafiles=glob(DATAFILES),\n",
     "        annofile=ANNOFILE, \n",
     "        out_dir=SAVEFOLDER, \n",
-    "        anno_label=\"Walmsley2020\", # Choose between WillettsSpecific2018, WillettsMET2018, DohertySpecific2018,...\n",
+    "        anno_label=ANNOLABEL,\n",
     "        sample_rate=SAMPLE_RATE,\n",
     "        winsec=WINSEC,\n",
     "        n_jobs=N_JOBS,\n",
@@ -121,7 +124,7 @@
     "    labels = np.unique(Y),\n",
     "    batch_size=1000,\n",
     "    hmm_ignore_transition_gaps=False,\n",
-    "    hmm_handle_sleep_transitions=True,\n",
+    "    hmm_handle_sleep_transitions=True, # Set to False for Willetts2018\n",
     "    device=\"cuda:0\",\n",
     "    window_sec=WINSEC,\n",
     "    verbose=True\n",
@@ -266,8 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note ordering is sleep, sedentary, light, MVPA\n",
-    "loaded_classifier.hmm.display(precision=3)"
+    "loaded_classifier.hmm.display(ACTIVITY_LABELS_DICT[ANNOLABEL], precision=3)"
    ]
   },
   {
