Fix EvaluateModel notebook

--- a/EvaluateModel.ipynb
+++ b/EvaluateModel.ipynb
@@ -40,7 +40,7 @@
     "ANNOLABEL = \"Walmsley2020\"\n",
     "\n",
     "\n",
-    "ACTIVITY_LABELS = np.unique(list(ACTIVITY_LABELS_DICT[ANNOLABEL].keys()))\n",
+    "ACTIVITY_LABELS = list(ACTIVITY_LABELS_DICT[ANNOLABEL].keys())\n",
     "\n",
     "out_dir = f\"outputs/evaluation/{ANNOLABEL}/actinet_bbaa_{convert_version(actinet_version)}\""
    ]
@@ -83,12 +83,11 @@
    "outputs": [],
    "source": [
     "# Accelerometer feature data prepared\n",
-    "if len(glob(f\"{SAVEFOLDER}/prepared/accelerometer/*.npy\")) == 4:\n",
-    "    X_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/X.npy\")\n",
-    "    Y_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/Y.npy\")\n",
-    "    T_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/T.npy\")\n",
-    "    P_bbaa = np.load(f\"{SAVEFOLDER}/prepared/accelerometer/pid.npy\")\n",
-    "\n",
+    "if len(glob(f\"{SAVEFOLDER}/prepared/{ANNOLABEL}/*.npy\")) == 4:\n",
+    "    X_bbaa = np.load(f\"{SAVEFOLDER}/prepared/{ANNOLABEL}/X.npy\")\n",
+    "    Y_bbaa = np.load(f\"{SAVEFOLDER}/prepared/{ANNOLABEL}/Y.npy\")\n",
+    "    T_bbaa = np.load(f\"{SAVEFOLDER}/prepared/{ANNOLABEL}/T.npy\")\n",
+    "    P_bbaa = np.load(f\"{SAVEFOLDER}/prepared/{ANNOLABEL}/pid.npy\")\n",
     "else:\n",
     "    X_bbaa, Y_bbaa, T_bbaa, P_bbaa = prepare_accelerometer_data(ANNOFILE, ANNOLABEL, SAVEFOLDER, N_JOBS)"
    ]
@@ -415,50 +414,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_confusion_matrices(results_df, group_by=None, save_path=None, fontsize=20):\n",
-    "    \"\"\"Generates and plots confusion matrices for different subgroups.\"\"\" \n",
-    "    if group_by is None:  # Full population\n",
-    "        fig, axs = plt.subplots(1, 2, sharey=True, figsize=(12, 6), dpi=800)\n",
-    "        fig.suptitle(\"Confusion matrices for full Capture-24 population\\nusing 5-fold group cross-validation\", \n",
-    "                     fontsize=fontsize)\n",
-    "        \n",
-    "        y_true_bbaa, y_pred_bbaa, y_true_actinet, y_pred_actinet, _ = build_confusion_matrix_data(results_df)\n",
-    "        \n",
-    "        plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'Baseline', ax=axs[0], fontsize=fontsize*0.8)\n",
-    "        plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'ActiNet', ax=axs[1], fontsize=fontsize*0.8)\n",
-    "        fig.tight_layout()\n",
-    "        plot_and_save_fig(fig, save_path)\n",
-    "    \n",
-    "    else:\n",
-    "        unique_groups = results_df[group_by].cat.categories\n",
-    "        fig = plt.figure(figsize=(12, 6*len(unique_groups)), dpi=800, constrained_layout=True)\n",
-    "        fig.suptitle(f\"Confusion matrices for different {group_by.lower()} in \" +\n",
-    "                     \"Capture-24 population\\nusing 5-fold group cross-validation\", fontsize=fontsize)\n",
-    "\n",
-    "        subfigs = fig.subfigures(nrows=len(unique_groups), ncols=1)\n",
-    "        \n",
-    "        for group, subfig in zip(unique_groups, subfigs):\n",
-    "            y_true_bbaa, y_pred_bbaa, y_true_actinet, y_pred_actinet, population =\\\n",
-    "                build_confusion_matrix_data(results_df, **{group_by.replace(' ', '_').lower(): group})\n",
-    "\n",
-    "            subfig.suptitle(f\"{group_by}: {group} (n = {population})\", fontsize=fontsize*0.9)\n",
-    "            axs = subfig.subplots(nrows=1, ncols=2, sharey=True)\n",
-    "\n",
-    "            plot_confusion_matrix(y_true_bbaa, y_pred_bbaa, 'Baseline', ax=axs[0], fontsize=fontsize*0.8)\n",
-    "            plot_confusion_matrix(y_true_actinet, y_pred_actinet, 'ActiNet', ax=axs[1], fontsize=fontsize*0.8)\n",
-    "\n",
-    "        plot_and_save_fig(fig, save_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_confusion_matrices(results_df, save_path=out_dir+\"/plots/conf_full_population.png\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.png\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.png\", fontsize=18)"
+    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, save_path=out_dir+\"/plots/conf_full_population.png\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.png\", fontsize=18)\n",
+    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.png\", fontsize=18)"
    ]
   },
   {
@@ -474,12 +432,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba_full_population.png\")\n",
-    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
+    "generate_bland_altman_plots(results_df, ACTIVITY_LABELS, ANNOLABEL, save_path=out_dir+\"/plots/ba_full_population.png\")\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], ACTIVITY_LABELS, ANNOLABEL, subset=\"female\",\n",
     "                            save_path=out_dir+\"/plots/ba_by_sex_female.png\")\n",
-    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], ACTIVITY_LABELS, ANNOLABEL, subset=\"male\",\n",
     "                            save_path=out_dir+\"/plots/ba_by_sex_male.png\")\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba_by_age.png\")"
+    "generate_bland_altman_plots(results_df, ACTIVITY_LABELS, ANNOLABEL, group_by=\"Age Band\", \n",
+    "                            save_path=out_dir+\"/plots/ba_by_age.png\")"
    ]
   },
   {
@@ -488,12 +447,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba__true_actinet_full_population.png\", compare_to_true='actinet')\n",
-    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
-    "                            save_path=out_dir+\"/plots/ba__true_actinet_by_sex_female.png\", compare_to_true='actinet')\n",
-    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
-    "                            save_path=out_dir+\"/plots/ba__true_actinet_by_sex_male.png\", compare_to_true='actinet')\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba__true_actinet_by_age.png\", compare_to_true='actinet')"
+    "generate_bland_altman_plots(results_df, ACTIVITY_LABELS, ANNOLABEL, \n",
+    "                            save_path=out_dir+\"/plots/ba_true_actinet_full_population.png\", compare_to_true='actinet')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], ACTIVITY_LABELS, ANNOLABEL, subset=\"female\",\n",
+    "                            save_path=out_dir+\"/plots/ba_true_actinet_by_sex_female.png\", compare_to_true='actinet')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], ACTIVITY_LABELS, ANNOLABEL, subset=\"male\",\n",
+    "                            save_path=out_dir+\"/plots/ba_true_actinet_by_sex_male.png\", compare_to_true='actinet')\n",
+    "generate_bland_altman_plots(results_df, ACTIVITY_LABELS, ANNOLABEL, group_by=\"Age Band\", \n",
+    "                            save_path=out_dir+\"/plots/ba_true_actinet_by_age.png\", compare_to_true='actinet')"
    ]
   },
   {
@@ -502,23 +463,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_bland_altman_plots(results_df, save_path=out_dir+\"/plots/ba_true_bbaa_full_population.png\", compare_to_true='bbaa')\n",
-    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], subset=\"female\",\n",
+    "generate_bland_altman_plots(results_df, ACTIVITY_LABELS, ANNOLABEL, \n",
+    "                            save_path=out_dir+\"/plots/ba_true_bbaa_full_population.png\", compare_to_true='bbaa')\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Female\"], ACTIVITY_LABELS, ANNOLABEL, subset=\"female\",\n",
     "                            save_path=out_dir+\"/plots/ba_true_bbaa_by_sex_female.png\", compare_to_true='bbaa')\n",
-    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], subset=\"male\",\n",
+    "generate_bland_altman_plots(results_df[results_df[\"Sex\"]==\"Male\"], ACTIVITY_LABELS, ANNOLABEL, subset=\"male\",\n",
     "                            save_path=out_dir+\"/plots/ba_true_bbaa_by_sex_male.png\", compare_to_true='bbaa')\n",
-    "generate_bland_altman_plots(results_df, group_by=\"Age Band\", save_path=out_dir+\"/plots/ba_true_bbaa_by_age.png\", compare_to_true='bbaa')"
+    "generate_bland_altman_plots(results_df, ACTIVITY_LABELS, ANNOLABEL, group_by=\"Age Band\", \n",
+    "                            save_path=out_dir+\"/plots/ba_true_bbaa_by_age.png\", compare_to_true='bbaa')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, save_path=out_dir+\"/plots/conf_full_population.png\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, group_by=\"Sex\", save_path=out_dir+\"/plots/conf_by_sex.png\", fontsize=18)\n",
-    "generate_confusion_matrices(results_df, ACTIVITY_LABELS, group_by=\"Age Band\", save_path=out_dir+\"/plots/conf_by_age.png\", fontsize=18)"
+    "Erorrs"
    ]
   },
   {
