Fix capture-24 data download

--- a/TrainModel.ipynb
+++ b/TrainModel.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import numpy as np\n",
     "import joblib\n",
-    "import urllib\n",
+    "import requests\n",
     "import os\n",
     "from tqdm.auto import tqdm\n",
     "import zipfile\n",
@@ -57,10 +57,22 @@
     "if not os.path.exists(capture24_path):\n",
     "    url = \"https://ora.ox.ac.uk/objects/uuid:99d7c092-d865-4a19-b096-cc16440cd001/files/rpr76f381b\"\n",
     "\n",
-    "    with tqdm(unit='B', unit_scale=True, desc='Downloading Capture-24: ',\n",
-    "            unit_divisor=1024, miniters=1, ascii=True, total=6900000000) as pbar:\n",
-    "        urllib.request.urlretrieve(url, filename=capture24_path, \n",
-    "                                   reporthook=lambda b, bsize, tsize: pbar.update(bsize))\n",
+    "    headers = {\n",
+    "    \"User-Agent\": \"Mozilla/5.0\",\n",
+    "    \"Accept\": \"*/*\"\n",
+    "    }\n",
+    "\n",
+    "    with requests.Session() as s:\n",
+    "        r = s.get(url, headers=headers, stream=True)\n",
+    "        r.raise_for_status()\n",
+    "\n",
+    "        with open(capture24_path, \"wb\") as f, tqdm(\n",
+    "            total=6.9e9, unit=\"B\", unit_scale=True, desc=\"Downloading Capture-24\"\n",
+    "        ) as pbar:\n",
+    "            for chunk in r.iter_content(chunk_size=1024 * 1024):\n",
+    "                if chunk:\n",
+    "                    f.write(chunk)\n",
+    "                    pbar.update(len(chunk))\n",
     "\n",
     "    with zipfile.ZipFile(capture24_path, \"r\") as f:\n",
     "        for member in tqdm(f.namelist(), desc=\"Unzipping: \"):\n",
@@ -85,7 +97,7 @@
    "source": [
     "DATAFILES = f\"data/capture24/P[0-9][0-9][0-9].csv.gz\"\n",
     "ANNOFILE = f\"data/capture24/annotation-label-dictionary.csv\"\n",
-    "ANNOLABEL = \"Willetts2018\" # Choose between WillettsSpecific2018, WillettsMET2018, DohertySpecific2018,...\n",
+    "ANNOLABEL = \"Walmsley2020\" # Choose between WillettsSpecific2018, WillettsMET2018, DohertySpecific2018,...\n",
     "                           # Walmsley2020, Willetts2018\n",
     "SAVEFOLDER = f\"data/capture24/{WINSEC}s/{ANNOLABEL}\"\n",
     "\n",
@@ -124,7 +136,7 @@
     "    labels = np.unique(Y),\n",
     "    batch_size=1000,\n",
     "    hmm_ignore_transition_gaps=False,\n",
-    "    hmm_handle_sleep_transitions=True, # Set to False for Willetts2018\n",
+    "    hmm_handle_sleep_transitions=False, # Set to False for Willetts2018\n",
     "    device=\"cuda:0\",\n",
     "    window_sec=WINSEC,\n",
     "    verbose=True\n",
